src/components/Bubble/Bubble.scss
@use "../../styles/vars";

.bubbleItem {
  position: relative;
  transform: translateY(50%);
  justify-self: flex-start;
  background-color: vars.$color-objects;
  display: flex;
  justify-content: space-between;
  align-items: center;
  padding: vars.$padding-small;
  color: vars.$color-text-alt;
  box-shadow: 0 5px 10px black;
  width: 80%;
  // height: clamp(5vh, 10vh, 100vh);
  height: 20vh;
  font-size: calc(60% + 1vmin);
  z-index: 100;

  @media screen and (max-width: 1300px) {
    font-size: calc(25% + 1vmin);
    height: 14vh;
  }
  @media screen and (max-width: 900px) {
    font-size: calc(25% + 1vmin);
    height: 16vh;
  }
  @media screen and (max-width: 800px) {
    font-size: calc(22% + 1vmin);
    height: 17vh;
  }
  @media screen and (max-width: 700px) {
    font-size: calc(20% + 1vmin);
    height: 25vh;
  }

  &::after,
  &::before {
    content: "";
    position: absolute;
    width: 100px;
    height: 100%;
    border-radius: 50%;
    z-index: 0;
    top: 0;
    right: 0;
    transform: translateX(50%);
    background-color: vars.$color-objects;
    // box-shadow: 15px 0 30px black;
    // box-shadow: -5px 5px 20px 5px #000;
  }
  &::before {
    transform: translateX(-50%);
    left: 0;
    right: 0;
  }
  &::after {
  }
  & .extended__logo {
    width: clamp(100px, 30%, 20%);
    height: clamp(5vh, 90%, 10vh);
    z-index: 1;

    & img {
      width: 70%;
      height: 100%;
      object-fit: contain;
    }
  }
  & p {
    width: clamp(200px, 50%, 80%);
    height: 100%;
    flex-grow: 1;
    z-index: 1;
    display: flex;
    align-items: center;
  }
}

